add changes and fix bag

--- a/index.html
+++ b/index.html
@@ -64,17 +64,38 @@
         <li class="header__nav-item"><a href="#foto__about">Почему мы</a></li>
         <li class="header__nav-item"><a href="#map">Контакты</a></li>
       </ul>
-      <div class="header__nav-link--cont"><a href="" class="header__nav-link">Записаться на просмотр</a></div>
+      <div class="header__nav-link--cont"><a href="#modal2" class="header__nav-link open_modal">Записаться на просмотр</a></div>
+      <div id="modal2" class="modal_div">
+        <span class="modal_close"></span>
+        <h3 class="modal_div-title">Записаться на просмотр</h3>
+        <p class="modal_div-text">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+        <form action="" class="modal_div-form">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Фамилия">
+          <input type="email" placeholder="E-mail">
+          <input type="tel" placeholder="Телефон">
+          <button class="modal_div-button">Записаться</button>
+        </form>
+      </div>
+      <div class="overlay"></div>
     </nav>
     <div class="header__wrapper">
       <h2 class="header__title">Colivium</h2>
       <h3 class="header__subtitle">Умный образ для молодых профессионалов</h3>
       <a href="#modal1" class="header__link open_modal">Записаться на просмотр</a>
       <div id="modal1" class="modal_div">
-        <span class="modal_close">X</span>
-        <p>sdjhsfkjdfhskjdfhskdhfks</p>
+        <span class="modal_close"></span>
+        <h3 class="modal_div-title">Записаться на просмотр</h3>
+        <p class="modal_div-text">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+        <form action="" class="modal_div-form">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Фамилия">
+          <input type="email" placeholder="E-mail">
+          <input type="tel" placeholder="Телефон">
+          <button class="modal_div-button">Записаться</button>
+        </form>
       </div>
-      <div id="overlay"></div>
+      <div class="overlay"></div>
     </div>
   </header>
   <section class="about" id="about">
@@ -114,7 +135,20 @@
         <p class="about__text-row"><span class="about__text-row--bold">Colivium</span> предлагает уникальные дизайны интерьеров, создающие комфортную и уютную обстановку в доме.</p>
         <p class="about__text-row">Спроектированные особым образом пространства помогут познакомиться с соседями, обеспечат истинное чувство общности, которого не хватает в больших городах.</p>
         <p class="about__text-row"><span class="about__text-row--bold">Colivium</span> – место, где ты обретешь дружбу.</p>
-        <a href="" class="about__text-link">Записаться на просмотр</a>
+        <a href="#modal3" class="about__text-link open_modal">Записаться на просмотр</a>
+        <div id="modal3" class="modal_div">
+        <span class="modal_close"></span>
+        <h3 class="modal_div-title">Записаться на просмотр</h3>
+        <p class="modal_div-text">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+        <form action="" class="modal_div-form">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Фамилия">
+          <input type="email" placeholder="E-mail">
+          <input type="tel" placeholder="Телефон">
+          <button class="modal_div-button">Записаться</button>
+        </form>
+      </div>
+      <div class="overlay"></div>
       </div>
     </div>
   </section>
@@ -303,12 +337,27 @@
         <p class="map__content-row--metro">м. Белорусская</p>
         <p class="map__content-row--metro">м. Красные Ворота</p>
         <p class="map__content-row--metro">м. Павелецкая</p>
-        <a href="" class="map__content-row--link">Записаться на просмотр</a>
+        <a href="#modal4" class="map__content-row--link open_modal">Записаться на просмотр</a>
+        <div id="modal4" class="modal_div">
+        <span class="modal_close"></span>
+        <h3 class="modal_div-title">Записаться на просмотр</h3>
+        <p class="modal_div-text">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+        <form action="" class="modal_div-form">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Фамилия">
+          <input type="email" placeholder="E-mail">
+          <input type="tel" placeholder="Телефон">
+          <button class="modal_div-button">Записаться</button>
+        </form>
       </div>
     </div>
   </section>
   <section class="subscribe">
     <h2 class="subscribe__title">Подписывайся на наши новости</h2>
+    <form action="" class="subscribe__form">
+      <input type="email" placeholder="E-mail">
+      <button class="subscribe__button">Подписаться</button>
+    </form>
     <div class="subscribe__content subscribe__content--tablet">
       <div class="subscribe__img">
         <img src="./assets/img/subscribe-1-min.jpg" alt="">
@@ -345,7 +394,18 @@
   <section class="join">
     <div class="join__wrapper">
       <h2 class="join__title">Присоединяйтесь к нам сегодня</h2>
-      <a href="" class="join__link">Заказать звонок</a>
+      <a href="#modal5" class="join__link open_modal">Заказать звонок</a>
+      <div id="modal5" class="modal_div">
+        <span class="modal_close"></span>
+        <h3 class="modal_div-title">Записаться на просмотр</h3>
+        <p class="modal_div-text">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+        <form action="" class="modal_div-form">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Фамилия">
+          <input type="email" placeholder="E-mail">
+          <input type="tel" placeholder="Телефон">
+          <button class="modal_div-button">Записаться</button>
+        </form>
     </div>
   </section>
   <footer class="footer">
