--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <input name="lastname" type="text" placeholder="Фамилия">
             <input name="email" type="email" placeholder="E-mail">
             <input name="tel" type="tel" placeholder="Телефон">
+            <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
         </form>
       </div>
@@ -89,6 +90,7 @@
             <input name="lastname" type="text" placeholder="Фамилия">
             <input name="email" type="email" placeholder="E-mail">
             <input name="tel" type="tel" placeholder="Телефон">
+            <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
         </form>
       </div>
@@ -139,6 +141,7 @@
             <input name="lastname" type="text" placeholder="Фамилия">
             <input name="email" type="email" placeholder="E-mail">
             <input name="tel" type="tel" placeholder="Телефон">
+            <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
         </form>
       </div>
@@ -339,6 +342,7 @@
             <input name="lastname" type="text" placeholder="Фамилия">
             <input name="email" type="email" placeholder="E-mail">
             <input name="tel" type="tel" placeholder="Телефон">
+            <input type="hidden" name="_language" value="ru" />
             <button class="modal_div-button ">Записаться</button>
           </form>
         </div>
@@ -348,6 +352,7 @@
     <h2 class="subscribe__title ">Подписывайся на наши новости</h2>
     <form action="https://formspree.io/hello@colivium.ru" method="POST" class="subscribe__form">
       <input type="email" placeholder="E-mail">
+      <input type="hidden" name="_language" value="ru" />
       <button class="subscribe__button ">Подписаться</button>
     </form>
     <div class="subscribe__content subscribe__content--tablet ">
@@ -397,6 +402,7 @@
             <input name="lastname" type="text" placeholder="Фамилия">
             <input name="email" type="email" placeholder="E-mail">
             <input name="tel" type="tel" placeholder="Телефон">
+            <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
         </form>
       </div>
