--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <li><a href="#advantages">Преимущества</a></li>
           <li><a href="#price">Сколько это стоит</a></li>
           <li><a href="#map">Контакты</a></li>
+          <li><a href="">EN</a></li>
         </ul>
       </div>
       <div class="background">
@@ -59,6 +60,7 @@
         <li class="header__nav-item"><a href="#advantages">Преимущества</a></li>
         <li class="header__nav-item"><a href="#price">Сколько это стоит</a></li>
         <li class="header__nav-item"><a href="#map">Контакты</a></li>
+        <li class="header__nav-item"><a href="">EN</a></li>
       </ul>
       <div class="header__nav-link--cont"><a href="#modal2" class="header__nav-link open_modal">Записаться на просмотр</a></div>
       <div id="modal2" class="modal_div">
