--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
   <section class="subscribe ">
     <h2 class="subscribe__title ">Подписывайся на наши новости</h2>
     <form action="https://formspree.io/hello@colivium.ru" method="POST" class="subscribe__form">
-      <input type="email" placeholder="E-mail">
+      <input type="email" name="email" placeholder="E-mail">
       <input type="hidden" name="_language" value="ru" />
       <button class="subscribe__button ">Подписаться</button>
     </form>
