--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
     <div class="header__wrapper">
       <h2 class="header__title">Colivium</h2>
-      <h3 class="header__subtitle">Умный образ для молодых профессионалов<br>Первый полностью укомплектованный коливинг в Москве</h3>
+      <h3 class="header__subtitle">Умный образ жизни для молодых профессионалов<br>Первый полностью укомплектованный коливинг в Москве</h3>
       <a href="#modal1" class="header__link open_modal">Записаться на просмотр</a>
       <div id="modal1" class="modal_div">
         <span class="modal_close"></span>
