--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       $('html,body').stop().animate({ scrollTop: $(d).offset().top }, t);
     });
   });
-
   </script>
   <link rel="stylesheet" href="./assets/css/popup.css">
 </head>
@@ -48,7 +47,7 @@
           <li><a href="#advantages">Преимущества</a></li>
           <li><a href="#price">Сколько это стоит</a></li>
           <li><a href="#map">Контакты</a></li>
-          <li><a href="">EN</a></li>
+          <li><a href="index_EN.html">EN</a></li>
         </ul>
       </div>
       <div class="background">
@@ -60,7 +59,7 @@
         <li class="header__nav-item"><a href="#advantages">Преимущества</a></li>
         <li class="header__nav-item"><a href="#price">Сколько это стоит</a></li>
         <li class="header__nav-item"><a href="#map">Контакты</a></li>
-        <li class="header__nav-item"><a href="">EN</a></li>
+        <li class="header__nav-item"><a href="index_EN.html">EN</a></li>
       </ul>
       <div class="header__nav-link--cont"><a href="#modal2" class="header__nav-link open_modal">Записаться на просмотр</a></div>
       <div id="modal2" class="modal_div">
@@ -71,7 +70,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="E-mail">
+            <input name="email" type="email" placeholder="Профиль в facebook">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
@@ -90,7 +89,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="E-mail">
+            <input name="email" type="email" placeholder="Профиль в facebook">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
@@ -141,7 +140,7 @@
           <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="E-mail">
+            <input name="email" type="email" placeholder="Профиль в facebook">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
@@ -153,6 +152,7 @@
   </section>
   <section class="advantages" id="advantages">
     <div class="advantages__wrapper">
+        <h2 class="subscribe__title ">Преимущества</h2>
       <div class="advantages__content advantages__content--top advantages__content--tablet">
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/comfort.svg" alt=" " class="advantages__content-img">
@@ -188,7 +188,7 @@
         </div>
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/sofa.svg" alt=" " class="advantages__content-img">
-          <p class="advantages__content-row">Домашний менеджер</p>
+          <p class="advantages__content-row">Управляющий</p>
         </div>
       </div>
       <div class="advantages__content advantages__content--top advantages__content--tablet">
@@ -218,17 +218,19 @@
       <div class="community__content">
         <div class="community__text">
           <h3 class="community__title">Cообщество Colivium</h3>
-          <p class="community__row">Ты будешь приглашен на все
-            мероприятия сообщества
-            Colivium</p>
-          <p class="community__row">Твоя жизнь станет насыщенной и интересной </p>
-          <p class="community__row">Ты сделаешь Colivium ярче</p>
-          <p class="community__row">Все мероприятия и новости Colivium в одном приложении</p>
+            <ul>
+                <li class="community__row">Ты будешь приглашен на все
+            мероприятия сообщества Colivium</li>
+                <li class="community__row">Твоя жизнь станет насыщенной и интересной </li>
+                <li class="community__row">Ты сделаешь Colivium ярче</li>
+                <li class="community__row">Все мероприятия и новости Colivium в одном приложении</li>
+            </ul>
         </div>
       </div>
     </div>
   </section>
   <section class="price" id="price">
+    <h2 class="subscribe__title ">Цена</h2>
     <div class="price__wrapper">
       <table class="price__table">
         <tr>
@@ -342,7 +344,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="E-mail">
+            <input name="email" type="email" placeholder="Профиль в facebook">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
             <button class="modal_div-button ">Записаться</button>
@@ -402,7 +404,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="E-mail">
+            <input name="email" type="email" placeholder="Профиль в facebook">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
