--- a/index_EN.html
+++ b/index_EN.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115156650-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-115156650-1');
+</script>
+
   <meta charset="UTF-8">
   <title>Colivium</title>
   <link rel="stylesheet" href="./assets/css/style.css">
