--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="Email">
+            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
@@ -100,7 +100,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="Email">
+            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
@@ -151,7 +151,7 @@
           <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="Email">
+            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
@@ -355,7 +355,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="Email">
+            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
             <button class="modal_div-button ">Записаться</button>
@@ -415,7 +415,7 @@
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="email" type="email" placeholder="Email">
+            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
