--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115156650-1"></script>
-<script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115156650-1"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'UA-115156650-1');
-</script>
 
+  </script>
   <meta charset="UTF-8">
   <title>Colivium</title>
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -22,6 +23,7 @@
   <link rel="stylesheet" href="./assets/css/media320.css">
   <link rel="stylesheet" href="./assets/css/slider.css">
   <link rel="stylesheet" href="./assets/css/menu.css">
+  <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -38,16 +40,15 @@
       $('html,body').stop().animate({ scrollTop: $(d).offset().top }, t);
     });
   });
+
   </script>
   <link rel="stylesheet" href="./assets/css/popup.css">
-  
 </head>
 
 <body>
   <header class="header">
-    <video autoplay loop muted class="bgvideo" id="bgvideo">
-      <source src="./assets/Colivium_video.mp4" type="video/mp4"></source>
-    </video>
+    <iframe width='100%' height='100%' src='https://roundme.com/embed/hn0peCxorjKtCplAG0KQ' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen class="iframe"></iframe>
+    <div class="kostil"></div>
     <nav class="header__nav navbar-fixed-top">
       <h1 class="header__nav-title">Colivium</h1>
       <div class="menu">
@@ -79,11 +80,11 @@
         <p class="modal_div-text">Хотите посмотреть наш коливинг?
           <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
-            <input name="firstname" type="text" placeholder="Имя">
-            <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
-            <input name="tel" type="tel" placeholder="Телефон">
-            <input type="hidden" name="_language" value="ru" />
+          <input name="firstname" type="text" placeholder="Имя">
+          <input name="lastname" type="text" placeholder="Фамилия">
+          <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
+          <input name="tel" type="tel" placeholder="Телефон">
+          <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
         </form>
       </div>
@@ -96,18 +97,21 @@
       <div id="modal1" class="modal_div">
         <span class="modal_close"></span>
         <h3 class="modal_div-title">Записаться на просмотр</h3>
-        <p class="modal_div-text">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+        <p class="modal_div-text">Хотите посмотреть наш коливинг?
+          <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
-            <input name="firstname" type="text" placeholder="Имя">
-            <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
-            <input name="tel" type="tel" placeholder="Телефон">
-            <input type="hidden" name="_language" value="ru" />
+          <input name="firstname" type="text" placeholder="Имя">
+          <input name="lastname" type="text" placeholder="Фамилия">
+          <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
+          <input name="tel" type="tel" placeholder="Телефон">
+          <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button">Записаться</button>
         </form>
       </div>
       <div class="overlay"></div>
-      </div>
+      <h3 class="header__subtitle header__subtitle--roundme">Посмотреть</h3>
+      <a href="#" class="roudme_link" id="roudme_link"></a>
+    </div>
   </header>
   <section class="about" id="about">
     <div class="about__content">
@@ -154,16 +158,16 @@
             <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
             <input name="tel" type="tel" placeholder="Телефон">
             <input type="hidden" name="_language" value="ru" />
-          <button class="modal_div-button">Записаться</button>
-        </form>
-      </div>
-      <div class="overlay"></div>
+            <button class="modal_div-button">Записаться</button>
+          </form>
+        </div>
+        <div class="overlay"></div>
       </div>
     </div>
   </section>
   <section class="advantages" id="advantages">
     <div class="advantages__wrapper">
-        <h2 class="subscribe__title ">Преимущества</h2>
+      <h2 class="subscribe__title ">Преимущества</h2>
       <div class="advantages__content advantages__content--top advantages__content--tablet">
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/comfort.svg" alt=" " class="advantages__content-img">
@@ -181,7 +185,8 @@
         </div>
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/doc.svg" alt=" " class="advantages__content-img">
-          <p class="advantages__content-row">Прозрачный договор, <br>никаких агентских платежей</p>
+          <p class="advantages__content-row">Прозрачный договор,
+            <br>никаких агентских платежей</p>
         </div>
       </div>
       <div class="advantages__content advantages__content--top advantages__content--tablet">
@@ -219,7 +224,8 @@
         </div>
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/detergent.svg" alt=" " class="advantages__content-img">
-          <p class="advantages__content-row">Безлимитные<br> хозяйственные средства</p>
+          <p class="advantages__content-row">Безлимитные
+            <br> хозяйственные средства</p>
         </div>
       </div>
     </div>
@@ -229,13 +235,12 @@
       <div class="community__content">
         <div class="community__text">
           <h3 class="community__title">Cообщество Colivium</h3>
-            <ul>
-                <li class="community__row">Ты будешь приглашен на все
-            мероприятия сообщества Colivium</li>
-                <li class="community__row">Твоя жизнь станет насыщенной и интересной </li>
-                <li class="community__row">Ты сделаешь Colivium ярче</li>
-                <li class="community__row">Все мероприятия и новости Colivium в одном приложении</li>
-            </ul>
+          <ul>
+            <li class="community__row">Ты будешь приглашен на все мероприятия сообщества Colivium</li>
+            <li class="community__row">Твоя жизнь станет насыщенной и интересной </li>
+            <li class="community__row">Ты сделаешь Colivium ярче</li>
+            <li class="community__row">Все мероприятия и новости Colivium в одном приложении</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -251,9 +256,11 @@
           </th>
           <th class="pricer__table--th-color">Новая современная квартира<span style="font-size: 12px; color: #aaa; "><br>40 м<sup>2</sup></span>
             <br><span style="font-size: 12px; color: #aaa; ">тыс. рублей/мес</span></th>
-          <th>Colivium<br><span style="font-size: 12px; color: #aaa; ">120 м<sup>2</sup></span>
+          <th>Colivium
+            <br><span style="font-size: 12px; color: #aaa; ">120 м<sup>2</sup></span>
             <br><span style="font-size: 12px; color: #aaa; ">тыс. рублей/мес</span></th>
-          <th class="pricer__table--th-color">Дешевая квартира<br><span style="font-size: 12px; color: #aaa; ">40 м<sup>2</sup></span>
+          <th class="pricer__table--th-color">Дешевая квартира
+            <br><span style="font-size: 12px; color: #aaa; ">40 м<sup>2</sup></span>
             <br><span style="font-size: 12px; color: #aaa; ">тыс. рублей/мес</span></th>
         </tr>
         <tr>
@@ -349,10 +356,11 @@
         <p class="map__content-row--metro ">м. Павелецкая</p>
         <a href="#modal4" class="map__content-row--link open_modal ">Записаться на просмотр</a>
         <div id="modal4" class="modal_div ">
-        <span class="modal_close "></span>
-        <h3 class="modal_div-title ">Записаться на просмотр</h3>
-        <p class="modal_div-text ">Хотите посмотреть наш коливинг? <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
-        <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
+          <span class="modal_close "></span>
+          <h3 class="modal_div-title ">Записаться на просмотр</h3>
+          <p class="modal_div-text ">Хотите посмотреть наш коливинг?
+            <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
+          <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
             <input name="firstname" type="text" placeholder="Имя">
             <input name="lastname" type="text" placeholder="Фамилия">
             <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
@@ -413,11 +421,11 @@
         <p class="modal_div-text ">Хотите посмотреть наш коливинг?
           <br>Запишитесь на просмотр и наш менеджер свяжется с вами в ближайшее время.</p>
         <form action="https://formspree.io/hello@colivium.ru" method="POST" class="modal_div-form">
-            <input name="firstname" type="text" placeholder="Имя">
-            <input name="lastname" type="text" placeholder="Фамилия">
-            <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
-            <input name="tel" type="tel" placeholder="Телефон">
-            <input type="hidden" name="_language" value="ru" />
+          <input name="firstname" type="text" placeholder="Имя">
+          <input name="lastname" type="text" placeholder="Фамилия">
+          <input name="socmedia" type="text" placeholder="Facebook/LinkedIn">
+          <input name="tel" type="tel" placeholder="Телефон">
+          <input type="hidden" name="_language" value="ru" />
           <button class="modal_div-button ">Записаться</button>
         </form>
       </div>
@@ -435,6 +443,16 @@
       </p>
     </div>
   </footer>
+  <script>
+  $('#roudme_link').click(function() {
+    $(".kostil").fadeOut(300);
+    $(".header__title").fadeOut(300);
+    $(".header__subtitle").fadeOut(300);
+    $(".header__link").fadeOut(300);
+    $(".roudme_link").fadeOut(300);
+  });
+
+  </script>
   <script src="./assets/js/slider.js "></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI_QwYjdRJdRaQhE_Usq4ddLAa3eX5_30&callback=initMap" async defer></script>
 </body>
