add block press

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <li><a href="#about">О нас</a></li>
           <li><a href="#advantages">Преимущества</a></li>
           <li><a href="#price">Сколько это стоит</a></li>
+          <li><a href="#press">Пресса</a></li>
           <li><a href="#map">Контакты</a></li>
           <li><a href="index_EN.html">EN</a></li>
         </ul>
@@ -70,6 +71,7 @@
         <li class="header__nav-item"><a href="#about">О нас</a></li>
         <li class="header__nav-item"><a href="#advantages">Преимущества</a></li>
         <li class="header__nav-item"><a href="#price">Сколько это стоит</a></li>
+        <li class="header__nav-item"><a href="#press">Пресса</a></li>
         <li class="header__nav-item"><a href="#map">Контакты</a></li>
         <li class="header__nav-item"><a href="index_EN.html">EN</a></li>
       </ul>
@@ -337,8 +339,18 @@
         <h2 class="foto__about-content-item--title ">Делись своими креативными и профессиональными идеями с близкими по духу людьми! Генерируй и создавай!</h2>
       </div>
       <div class="foto__about-content-item foto__about-content-item--6 ">
-        <h2 class="foto__about-content-item--title ">Отдыхай и готовь вместе с друзьями
-на укомплектованной кухне</h2>
+        <h2 class="foto__about-content-item--title ">Отдыхай и готовь вместе с друзьями на укомплектованной кухне</h2>
+      </div>
+    </div>
+  </section>
+  <section class="press" id="press">
+    <h2 class="subscribe__title">Пресса о Colivium</h2>
+    <div class="press__wrapper">
+      <div class="press__content">
+        <a href="" class="press_link press_link--strelka"></a>
+        <a href="" class="press_link press_link--village"></a>
+        <a href="" class="press_link press_link--rbc"></a>
+        <a href="" class="press_link press_link--ntv"></a>
       </div>
     </div>
   </section>
