--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <li><a href="#advantages">Преимущества</a></li>
           <li><a href="#price">Сколько это стоит</a></li>
           <li><a href="#press">Пресса</a></li>
+          <li><a href="ф">Блог</a></li>
           <li><a href="#map">Контакты</a></li>
           <li><a href="index_EN.html">EN</a></li>
         </ul>
@@ -72,6 +73,7 @@
         <li class="header__nav-item"><a href="#advantages">Преимущества</a></li>
         <li class="header__nav-item"><a href="#price">Сколько это стоит</a></li>
         <li class="header__nav-item"><a href="#press">Пресса</a></li>
+        <li class="header__nav-item"><a href="ыв">Блог</a></li>
         <li class="header__nav-item"><a href="#map">Контакты</a></li>
         <li class="header__nav-item"><a href="index_EN.html">EN</a></li>
       </ul>
