Added links to Press

--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
     <h2 class="subscribe__title">Пресса о Colivium</h2>
     <div class="press__wrapper">
       <div class="press__content">
-        <a href="" class="press_link press_link--village"></a>
-        <a href="" class="press_link press_link--rbc"></a>
-        <a href="" class="press_link press_link--ntv"></a>
-        <a href="" class="press_link press_link--strelka"></a>
+        <a href="" class="http://www.the-village.ru/village/business/new-biz/304395-kolivium"></a>
+        <a href="" class="https://www.facebook.com/colivium/videos/177236549724717/"></a>
+        <a href="" class="https://www.facebook.com/colivium/videos/186313858816986/"></a>
+        <a href="" class="http://strelka.com/ru/magazine/2018/03/02/digest-moscow-service"></a>
       </div>
     </div>
   </section>
